--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,9 @@ header {
     width: 370px;
 
     background: var(--white-text-color);
+}
 
+.example-card:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
