--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,18 @@ header {
 
 /* Особенности */
 
+.benefits-icons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    width: 270px;
+    height: 120px;
+    background: #F5F4FA;
+    border-radius: 4px;
+}
+
 .benefits-list {
     display: flex;
     flex-wrap: wrap;
@@ -381,6 +393,50 @@ header {
 .teammate-join-link:focus {
     background-color: var(--hover-focus-color);
     fill: var(--white-text-color);
+}
+
+/* Клиенты */
+
+.clients-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--primary-text-color);
+    margin-bottom: 50px;
+}
+
+.clients-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--card-gap));
+    margin-left: calc(-1 * var(--card-gap));
+}
+
+.client-item {
+    margin-top: var(--card-gap);
+    margin-left: var(--card-gap);
+    flex-basis: calc(100% / 6 - var(--card-gap));
+}
+
+.client-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 170px;
+    height: 92px;
+    border: 1px solid var(--primary-icon-color);
+    fill: var(--primary-icon-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+.client-link:hover,
+.client-link:focus {
+    fill: var(--hover-focus-color);
+    border: 1px solid var(--hover-focus-color);
 }
 
 /* вторая страница */
