--- a/css/styles.css
+++ b/css/styles.css
@@ -369,14 +369,14 @@ header {
     margin-top: 0;
 }
 
-.teammate-join {
+.teammate-join-list {
+    display: flex;
+    justify-content: center;
     margin-top: 16px;
 }
 
-.teammate-join-list {
-    display: flex;
-    margin: 0 32px;
-    justify-content: space-between;
+.teammate-join-item:not(:last-child) {
+    margin-right: 10px;
 }
 
 .teammate-join-link {
@@ -506,7 +506,12 @@ header {
     background: var(--white-text-color);
 }
 
-.example-card:hover {
+.example-card-link {
+    display: block;
+    text-decoration: none;
+}
+
+.example-card-link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -528,6 +533,7 @@ header {
 
     margin-top: 0;
     margin-bottom: 4px;
+    color: var(--primary-text-color);
 }
 
 .project-type {
